//
// Copyright 2019 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto2";

package zetasql;

option java_package = "com.google.zetasql";
option java_outer_classname = "InternalErrorLocationProtos";

import "zetasql/public/error_location.proto";

// Serialized form of ParseLocationPoint, only to be used inside the
// ZetaSQL library to attach an error location in internal form to a
// absl::Status. This should never leave the library: externally we should
// attach an ErrorLocation proto.
message InternalErrorLocation {
  optional int32 byte_offset = 3;

  optional string filename = 4;

  // An optional list of error source information for the related Status.
  // The last element in this list is the immediate error cause, with
  // the previous element being its cause, etc.
  repeated ErrorSource error_source = 5;
}
